<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="379dp"
        android:layout_height="732dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:gravity="end|bottom"
            android:background="@drawable/background"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="numberSigned|numberDecimal"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#000000"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <EditText-->
<!--        android:textColor="#595858"-->
<!--            android:id="@+id/newNumber"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="65dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            android:background="@drawable/background"-->
<!--            android:ems="10"-->
<!--            android:focusable="false"-->
<!--            android:focusableInTouchMode="false"-->
<!--            android:inputType="numberSigned|numberDecimal"-->
<!--            android:minHeight="48dp"-->
<!--            android:paddingStart="14dp"-->
<!--            android:paddingEnd="14dp"-->
<!--            android:textColor="#595858"-->
<!--            android:textSize="18sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/operation"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/result" />-->

<!--        <TextView-->
<!--            android:id="@+id/operation"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="65dp"-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:background="@drawable/background"-->
<!--            android:textAlignment="center"-->
<!--            android:textSize="48sp"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/newNumber"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/result"-->
<!--            tools:ignore="MissingConstraints" />-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonClear"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_buttonclear"
            android:text="@string/clear"
            android:textColor="#121212"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonBracket"
            app:layout_constraintEnd_toStartOf="@+id/buttonBracket"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonBracket"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/background_buttonclear"
            android:text="@string/plusMinus"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/result" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonPercentage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_buttonclear"
            android:text="@string/percentage"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"

            app:layout_constraintBaseline_toBaselineOf="@+id/buttonBracket"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDivide"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/background_function"
            android:textColor="@color/white"
            android:text="@string/divide"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonPercentage"
            app:layout_constraintStart_toEndOf="@+id/buttonPercentage"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_numbers"
            android:textColor="@color/white"
            android:text="@string/seven"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button8"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintStart_toStartOf="@+id/buttonClear" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/background_numbers"
            android:textColor="@color/white"
            android:text="@string/eight"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/buttonBracket" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_numbers"
            android:textColor="@color/white"
            android:text="@string/nine"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/buttonPercentage" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonMultiply"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/background_function"
            android:textColor="@color/white"
            android:text="@string/multiply"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button9"
            app:layout_constraintEnd_toEndOf="@+id/buttonDivide"
            app:layout_constraintStart_toEndOf="@+id/button9"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_numbers"
            android:textColor="@color/white"
            android:text="@string/four"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button5"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintStart_toStartOf="@+id/button7"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/background_numbers"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/button8"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_numbers"
            android:textColor="@color/white"
            android:text="@string/six"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/button9"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSubtract"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/background_function"
            android:textColor="@color/white"
            android:text="@string/subtract"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button6"
            app:layout_constraintEnd_toEndOf="@+id/buttonMultiply"
            app:layout_constraintStart_toEndOf="@+id/button6"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_numbers"
            android:textColor="@color/white"
            android:text="@string/one"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button2"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button4"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/background_numbers"
            android:textColor="@color/white"
            android:text="@string/two"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_numbers"
            android:textColor="@color/white"
            android:text="@string/three"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/button6"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAdd"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/background_function"
            android:textColor="@color/white"
            android:text="@string/add"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="@+id/buttonSubtract"
            app:layout_constraintStart_toEndOf="@+id/button3"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_numbers"
            android:textColor="@color/white"
            android:text="@string/zero"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonDot"
            app:layout_constraintEnd_toStartOf="@+id/buttonDot"
            app:layout_constraintStart_toStartOf="@+id/button1"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDot"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/background_numbers"
            android:textColor="@color/white"
            android:text="@string/dot"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/backSpace"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_numbers"
            app:srcCompat="@drawable/backspace"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEqual"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_equals"
            android:textColor="@color/white"
            android:text="@string/equal"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/buttonAdd"
            app:layout_constraintStart_toEndOf="@+id/backSpace"
            tools:ignore="MissingConstraints" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5039578" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>